# taskforce

./: .cursorrules  .env.example  .env.prod.example  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  compose.dev.yaml  compose.yaml  dev-local.sh  docker-compose.yml  docker-dev.sh  docker-start.sh  ideate.md
.claude/: settings.json
.claude/commands/: sp.containerize.md  sp.generate-adrs.md  sp.k8s-debug.md  sp.orchestrate.md  sp.tasks.md
.claude/skills/: automation-script-builder.md  hetzner-k3s-manager.md
.github/workflows/: api.yml  cli.yml  deploy.yml  test-auth.yml
.specify/memory/: constitution.md
.specify/skills/: chatkit-integration.skill.md  fastapi-chatkit-endpoint.skill.md  mcp-agent-auth.skill.md
.specify/subagents/: chatkit-integration-agent.prompt.md  phr-harvester-agent.prompt.md
apps/api/: .env.example  Dockerfile.dev  pyproject.toml
apps/mcp-server/: .env.example  README.md
apps/notification-service/: Dockerfile  pyproject.toml
docs/: DEPLOYMENT.md  HELM-WALKTHROUGH.md  KUBERNETES-DEBUGGING-GUIDE.md  LEARNINGS-PHASE-IV.md  MONOREPO_STRUCTURE.md  RETROSPECTIVE.md  dapr-setup.md
research/: DIRECTIVES.md  ideate.md  phase-1-dx.md  requirement.md
research/taskflow-specs/cli/: pyproject.toml
scripts/: README.md  deploy-local.sh  deploy-prod.sh
sso-platform/: .env.example  CLAUDE.md  CONTAINERIZATION.md  Dockerfile  Dockerfile.dev  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web-dashboard/: Dockerfile  Dockerfile.dev  ORG-SWITCHING-GUIDE.md  next.config.ts  package.json  pnpm-lock.yaml
(+647 files in other folders)
